--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "mysql": "^2.15.0",
+    "nodejieba": "^2.2.5",
     "serve-favicon": "~2.4.5"
   }
 }
